Missed some other places where I used List.of